--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -7,10 +7,47 @@ page{
   box-sizing: border-box;
   box-shadow: 0 0 6rpx #ccc;
   margin: 0 auto;
+  font-size: 30rpx;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 .cellBox{
   width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 20rpx;
+  box-sizing: border-box;
 }
 .cell{
   width: 33.33%;
+  font-size: 30rpx;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  /* border-right: 1rpx solid #f5f5f5;
+  border-top: 1rpx solid #f5f5f5;
+  border-bottom: 1rpx solid #f5f5f5; */
+  box-sizing: border-box;
+  padding: 30rpx 0;
+}
+.cell:nth-child(3n){
+  border-right: none;
+}
+.cell .iconfont{
+  font-size: 60rpx;
+}
+.topCell{
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 20rpx;
+}
+.topLi{
+  width: 25%;
+  text-align: center;
+  font-size: 26rpx;
+  line-height: 40rpx;
 }
