--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -43,11 +43,15 @@ page{
   width: 100%;
   display: flex;
   flex-wrap: wrap;
-  margin-top: 20rpx;
+  margin-top: 30rpx;
 }
 .topLi{
   width: 25%;
   text-align: center;
   font-size: 26rpx;
   line-height: 40rpx;
+  padding: 20rpx 0;
+}
+.topTitle{
+  font-size: 34rpx;
 }
