--- a/pages/index/reg/reg.wxss
+++ b/pages/index/reg/reg.wxss
@@ -55,7 +55,7 @@
 }
 .sub{
   height: 80rpx;
-  background: #ccc;
+  background: #fed784;
   line-height: 80rpx;
   color: #fff;
   font-size: 30rpx;
