--- a/pages/index/reg/reg.wxml
+++ b/pages/index/reg/reg.wxml
@@ -6,20 +6,20 @@
 </view>
 <view class='formBox'>
     <view class="inputBox">
-      <view class="iconfont icon-yonghuming"></view>
-      <input placeholder='请输入手机号码'></input>
+      <view class="iconfont icon-shoujihaoma"></view>
+      <input placeholder='请输入手机号码' maxlength='11' data-type="phone" bindinput='getMsg'></input>
     </view>
     <view class="inputBox">
-      <view class="iconfont icon-yonghuming"></view>
-      <input placeholder='请输入验证码'></input>
-      <view class="sendCode">获取验证码</view>
+      <view class="iconfont icon-yanzhengma"></view>
+      <input placeholder='请输入验证码' maxlength='4' data-type="code" bindinput='getMsg'></input>
+      <view class="sendCode" disabled='{{!sendStatus}}' style="background:{{sendStatus?'#fed784':'#ccc'}};color:#fff" bindtap='sendCode'>{{send}}</view>
     </view>
     <view class="inputBox">
-      <view class="iconfont icon-yonghuming"></view>
-      <input placeholder='请输入姓名'></input>
+      <view class="iconfont icon-zhcc_yonghuming"></view>
+      <input placeholder='请输入姓名' maxlength='11' data-type="name" bindinput='getMsg'></input>
     </view> 
     <view class="inputBox">
-      <view class="iconfont icon-yonghuming"></view>
+      <view class="iconfont icon-xingbie"></view>
       <view class='radioBox'>
          <view wx:for="{{sex}}" wx:key="sex" class='sex' data-index="{{index}}" bindtap='radioChange'>
               <view class="iconfont {{index==sexValue?'icon-xuanzhong':'icon-weixuanzhong'}}"></view>
@@ -27,5 +27,5 @@
          </view>
       </view>
     </view> 
-    <button class="sub">提交</button>
+    <button class="sub"  bindtap='reg'>提交</button>
 </view>
