--- a/pages/index/active/active.wxss
+++ b/pages/index/active/active.wxss
@@ -41,3 +41,12 @@
   flex: 1;
   text-align: right;
 }
+.address{
+  display: block
+}
+.address textarea{
+  width: 100%;
+  height: 130rpx;
+  padding: 20rpx;
+  box-sizing: border-box;
+}
