--- a/pages/index/transfer/transfer.wxss
+++ b/pages/index/transfer/transfer.wxss
@@ -8,11 +8,16 @@
 .inputBox{
   display: flex;
   align-items: center;
+  height: 80rpx;
+  
 }
 .inputBox input{
   flex: 1;
   border-bottom: 1rpx solid #f5f5f5;
-
+  height: 80rpx;
+}
+.inputBox .iconfont{
+  margin-right: 10rpx;
 }
 .sub{
   width: 100%;
@@ -20,6 +25,6 @@
   line-height: 80rpx;
   font-size: 30rpx;
   color: #fff;
-  background: #ccc;
+  background: #fed784;
   margin-top: 30rpx;
 }
