--- a/pages/index/reg/reg.wxml
+++ b/pages/index/reg/reg.wxml
@@ -10,15 +10,19 @@
       <input placeholder='请输入手机号码' maxlength='11' data-type="phone" bindinput='getMsg'></input>
     </view>
     <view class="inputBox">
+      <view class="iconfont icon-shoujihaoma"></view>
+      <input placeholder='请输入密码' maxlength='11' type="password" data-type="password" bindinput='getMsg'></input>
+    </view>
+    <!-- <view class="inputBox">
       <view class="iconfont icon-yanzhengma"></view>
       <input placeholder='请输入验证码' maxlength='4' data-type="code" bindinput='getMsg'></input>
       <view class="sendCode" disabled='{{!sendStatus}}' style="background:{{sendStatus?'#fed784':'#ccc'}};color:#fff" bindtap='sendCode'>{{send}}</view>
-    </view>
+    </view> -->
     <view class="inputBox">
       <view class="iconfont icon-zhcc_yonghuming"></view>
       <input placeholder='请输入姓名' maxlength='11' data-type="name" bindinput='getMsg'></input>
     </view> 
-    <view class="inputBox">
+    <!-- <view class="inputBox">
       <view class="iconfont icon-xingbie"></view>
       <view class='radioBox'>
          <view wx:for="{{sex}}" wx:key="sex" class='sex' data-index="{{index}}" bindtap='radioChange'>
@@ -26,6 +30,6 @@
               {{item.name}}
          </view>
       </view>
-    </view> 
+    </view>  -->
     <button class="sub"  bindtap='reg'>提交</button>
 </view>
