--- a/pages/index/againTransfer/againTransfer.wxml
+++ b/pages/index/againTransfer/againTransfer.wxml
@@ -1,7 +1,7 @@
 <view class='formBox'>
     <view class='inputBox'>
       <view class='iconfont icon-zhuce'></view>
-      <input placeholder='请输入市场积分' type='number'></input>
+      <input placeholder='请输入市场积分' type='number' data-type='number' bindinput='getMsg'></input>
     </view>
-    <button class='sub'>提交</button>
+    <button class='sub' bindtap='active'>提交</button>
 </view>
